# dstc-matching

./: .gitignore  CLAUDE.md  COMPAT-CHANGES.md  PLAN.md  README.md  SCHEMA.md  export-report.json  index.html  main.py  package.json  pyproject.toml  scraped.html  tailwind.config.js  vite.config.js
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  deploy.yml
base44/entities/: ContestantProfile.jsonc  Match.jsonc  Message.jsonc  SwipeAction.jsonc  Team.jsonc  TeamInvite.jsonc
public/: background.avif  bnd-dstc.avif  cte-logo.avif  doan-logo.avif  favicon.avif  ftu-logo.avif
server/: .containerignore  .env.example  Containerfile  data.db  database.py  mailer.py  main.py  matching-api.container  requirements.txt
server/auth/: config.py  dependencies.py  gotrue.py  jwt.py  recovery.py
server/routes/: auth.py  integrations.py  invites.py  matches.py  messages.py  profiles.py  swipes.py  teams.py
server/templates/: match_notification.html  message_notification.html  recovery.html
src/: App.jsx  index.css
src/api/: apiClient.js  base44Client.js
src/hooks/: useRealtimeNotifications.js
src/lib/: AuthContext.jsx  PageNotFound.jsx  app-params.js  constants.js  supabase.js
src/pages/: AdminMatches.jsx  Dashboard.jsx  Discover.jsx  ForgotPasswordPage.jsx  Guide.jsx  Home.jsx  Landing.jsx  LoginPage.jsx  Matches.jsx  Messages.jsx  Profile.jsx  ProfileDetail.jsx  ResetPasswordPage.jsx  Settings.jsx  SignupPage.jsx  TeamPage.jsx  (+1 more)
supabase/: .gitignore  config.toml  generate-keys.sh  podman-compose.yml  supabase-db-data.volume  sync-container-env.sh
(+23 files in other folders)
