[project]
name = "dstc-matching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.1",
    "python-multipart>=0.0.32",
    "uvicorn>=0.51.0",
    "asyncpg>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]
